--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="css/main-style.min.css">
 </head>
 <body>
-    <div id="main-container">
+    <div id="main-container" style=" background-image: url(image.jpg);">
         <h1 class="z-index">Get Something To Do . . . . . </h1>
         <p class="z-index">This app helps your get a random activity to engage in when bored <br> Dont be rapped in boredom make use of this opportunity</p>
         <div id="content" class="z-index">
             <h3 id="activity"></h3>
             <p id="type"></p>
             <p id="link"></p>
-            <p id="instruction">For You To Get A New Activity <br>Refresh The Page</p>
+            <p id="instruction">For You To Get A New Activity <br>Refresh The Page <br>...Khoblex...</p>
             
         </div>
 
@@ -26,7 +26,7 @@
         </svg>
 
         <svg id="middle-svg" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-            <path fill="rgba(255, 255, 255, 0.589)" d="M48,-26.2C59.8,-7.3,65.2,16.8,56.2,34C47.2,51.2,23.6,61.6,0.4,61.4C-22.7,61.1,-45.5,50.3,-56.8,31.7C-68.2,13.2,-68.1,-13,-56.7,-31.7C-45.3,-50.4,-22.7,-61.5,-2.3,-60.2C18.1,-58.9,36.2,-45.1,48,-26.2Z" transform="translate(100 100)" />
+            <path fill="blue" d="M48,-26.2C59.8,-7.3,65.2,16.8,56.2,34C47.2,51.2,23.6,61.6,0.4,61.4C-22.7,61.1,-45.5,50.3,-56.8,31.7C-68.2,13.2,-68.1,-13,-56.7,-31.7C-45.3,-50.4,-22.7,-61.5,-2.3,-60.2C18.1,-58.9,36.2,-45.1,48,-26.2Z" transform="translate(100 100)" />
         </svg>
 
         <svg id="right-svg" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
@@ -34,7 +34,7 @@
         </svg>
 
 
-
+        
     </div>
 
     <script src="app.js"></script>
