Added about page

--- a/about.html
+++ b/about.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="css/main-style.min.css">
 </head>
 <body>
-    
+    <div id="about-container">
+        <a href="index.html">Back</a>
+        <h1>ABOUT - APP</h1>
+        <p id="description">
+            This App uses an open sourse API which help generate the tasks suggested. <br>
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+
+        <h3>
+            What This App Offers
+        </h3>
+        <p id="details">
+            It offers different task suggestions to user to help them break boredom. <br>
+            Before a new task suggestion will show up, the user need to refresh the DOM to help fetch a new task into the DOM.
+        </p>
+        <p id="details">
+            Some of these task suggestions comes with a link to a different page where the user can learn or participate in that task. <br>
+            
+        </p>
+        <p id="dots">
+            . . . . . . . . . . . . . . 
+        </p>
+        <p>
+            Developed By KhobLex
+        </p>
+        <p id="dots">
+            . . . . . . . . . . . . . . 
+        </p>
+    </div>
 </body>
 </html>
