--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <div id="main-container" style=" background-image: url(image.jpg);">
+        <a href="about.html" id="about-link">About Us</a>
         <h1 class="z-index">Get Something To Do . . . . . </h1>
-        <p class="z-index">This app helps your get a random activity to engage in when bored <br> Dont be rapped in boredom make use of this opportunity</p>
+        <p class="z-index">This app helps you get a random activity to engage in when bored <br> Dont be rapped in boredom make use of this opportunity</p>
         <div id="content" class="z-index">
             <h3 id="activity"></h3>
             <p id="type"></p>
             <p id="link"></p>
-            <p id="instruction">For You To Get A New Activity <br>Refresh The Page <br>...Khoblex...</p>
+            <p id="instruction">For You To Get A New Activity <br>Refresh The Page </p>
             
         </div>
 
